--- a/assignment/styles/style.css
+++ b/assignment/styles/style.css
@@ -1,1 +1,9 @@
 /* give your assignment a fun background color */
+body {
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
+    url("../../media/examples/lizard.png");
+};
+
+
+
+
